Makes the close icon smaller and adds link to the correct path - localhost:3000 not localhost:3000/user

--- a/client/src/components/ChatHeader/ChatHeader.css
+++ b/client/src/components/ChatHeader/ChatHeader.css
@@ -19,6 +19,13 @@
     margin-right: 5%;
   }
 
+  .close {
+    margin-right: 5%;
+    height: 30px;
+    width: 30px;
+    color: black;
+  }
+
   #face {
       position: relative;
       top: 280px;
